--- a/JSONParser.cabal
+++ b/JSONParser.cabal
@@ -1,5 +1,5 @@
 name: JSONParser
-version: 0.1.0.1
+version: 0.1.0.2
 cabal-version: >=1.10
 build-type: Simple
 license: BSD3
@@ -23,6 +23,7 @@ library
         base >=4.9 && <4.10,
         parsec >=3.1 && <3.2
     default-language: Haskell2010
+    default-extensions: Safe
     other-extensions: NoMonomorphismRestriction
 
 
