--- a/JSONParser.cabal
+++ b/JSONParser.cabal
@@ -1,5 +1,5 @@
 name: JSONParser
-version: 0.1.0.3
+version: 0.1.0.4
 cabal-version: >=1.10
 build-type: Simple
 license: BSD3
@@ -20,8 +20,8 @@ library
     exposed-modules:
         Text.JSONParser
     build-depends:
-        base >=4.9 && <4.10,
-        parsec >=3.1 && <3.2
+        base <10000,
+        parsec <10000
     default-language: Haskell2010
     default-extensions: Safe
     other-extensions: NoMonomorphismRestriction
